--- a/resources/views/frontend/clientes/create.edge
+++ b/resources/views/frontend/clientes/create.edge
@@ -160,12 +160,14 @@
     </div>
 
     <div class="botoes">
-      <button class="botao-cancelar">
-        Cancelar
+      <button type="cancel" 
+              onclick="window.location='/clientes/';return false;" 
+              class="botao-cancelar">
+          Cancelar
       </button>
 
-      <button class="botao-cadastrar" type="submit">
-        Cadastrar
+      <button type="submit" class="botao-cadastrar">
+        Salvar
       </button>
     </div>
   </form>
