--- a/resources/views/layouts/menu.edge
+++ b/resources/views/layouts/menu.edge
@@ -8,7 +8,7 @@
           <a id="cor" class="nav-link" href="/servicos">Serviços</a>
         </li>
         <li class="nav-item">
-          <a id="cor" class="nav-link" href="/usuario">Usuários</a>
+          <a id="cor" class="nav-link" href="/usuarios">Usuários</a>
         </li>
         <li class="nav-item">
           <a id="cor" class="nav-link" href="/produto">Produtos</a>
