--- a/resources/views/frontend/produtos/index.edge
+++ b/resources/views/frontend/produtos/index.edge
@@ -33,18 +33,19 @@
           <td>{{ produto.valor_compra }}</td>
           <td>{{ produto.valor_venda }}</td>
           <td>
-            <a href="/produto/edit/{{ produto.id }}">
-            <span class="material-icons">Editar</span>
+            <a href="/produto/{{ produto.id }}/edit">
+            <span class="material-icons">edit</span>
             </a>
           </td>
 
           <td>
-            <form action="/produto/destroy/{{ produto.id }}" method="POST">
+
+            <form action="produto/destroy/{{ produto.id }}" method="POST">
               {{ csrfField() }}
 
                 <button type="submit"
                 onclick="return confirm('Certeza que gostaria de deletar o produto: {{ produto.nome }} ?')";>
-                  <span class="material-icons">Delete</span>
+                  <span class="material-icons">delete</span>
                 </button>
             </form>
           </td>
