--- a/resources/views/frontend/servicos/index.edge
+++ b/resources/views/frontend/servicos/index.edge
@@ -36,7 +36,7 @@
       </thead>
       </thead>
       <tbody>
-        @each(servico in Servicos)
+        @each(servico in servicos)
         
         <tr>
           <td><a href="/servico/show/{{ servico.id }}">{{ servico.nome }}</a></td>
