--- a/resources/views/frontend/produtos/create.edge
+++ b/resources/views/frontend/produtos/create.edge
@@ -45,8 +45,10 @@
       </div>
 
     <div class="botoes">
-      <button class="botao-cancelar">
-        Cancelar
+      <button type="cancel"
+              onclick="window.location='/produto/';return false;"
+              class="botao-cancelar">
+          Cancelar
       </button>
 
       <button class="botao-cadastrar" type="submit">
