--- a/resources/views/frontend/produtos/show.edge
+++ b/resources/views/frontend/produtos/show.edge
@@ -3,8 +3,10 @@
 @section("content")
 
 <div id="lista">
+  <h3>Produto: {{ produto.nome }}</h3>
   <div>
     <div id="busca">
+
 
     </div>
 
@@ -23,6 +25,23 @@
           <td>{{ produto.descricao }}</td>
           <td>{{ produto.valor_compra }}</td>
           <td>{{ produto.valor_venda }}</td>
+          <td>
+            <a href="/produto/{{ produto.id }}/edit">
+            <span class="material-icons">edit</span>
+            </a>
+          </td>
+
+          <td>
+
+            <form action="produto/destroy/{{ produto.id }}" method="POST">
+              {{ csrfField() }}
+
+                <button type="submit"
+                onclick="return confirm('Certeza que gostaria de deletar o produto: {{ produto.nome }} ?')";>
+                  <span class="material-icons">delete</span>
+                </button>
+            </form>
+          </td>
         </tr>
       </tbody>
     </table>
